<b>Version 1.24</b>:<br>
<ul>
    <li>[BUGFIX] Fehler beim Erstellen der Favoritenliste</li>
    <li>[BUGFIX] Verlinkungen des Next-Buttons gefixt</li>
</ul>
<b>Version 1.23</b>:<br>
<ul>
    <li>[INTERFACE] Ladereihenfolge für Ladebalken angepasst um Weisses Bild zu verhindern</li>
    <li>[INTERFACE] Hilfe zum hinzufügen von Medien ergänzt</li>
    <li>[INTERFACE] Merken-Button verkleinert</li>
</ul>
<b>Version 1.22</b>:<br>
<ul>
    <li>[BUGFIX] Audiokontrollen werden nun konstant angezeigt</li>
    <li>[OPTIMIERUNG] Favoriten können nun ohne Unterbruch des Mediums hinzugefügt werden</li>
</ul>
<b>Version 1.21</b>:<br>
<ul>
    <li>[INTERFACE] Hovereffekt bei Suchen-Button hinzugefügt</li>
    <li>[INTERFACE] Suchen-Button im Suchfeld hinzugefügt</li>
    <li>[INTERFACE] Ladebalken hinzugefügt</li>
</ul>
<b>Version 1.20</b>:<br>
<ul>
    <li>[FEATURE] Speichern der Lautstärkeeinstellung zwischen den Videos/Musikdateien (Mindestlautstärke: 20%)</li>
    <li>[BUGFIX] Anzeigefehler bei 0 Suchresultaten</li>
    <li>[INTERFACE] Anpassung Standardlinkfarbe</li>
    <li>[INTERFACE] Hilfe um unterstützte Dateiformate ergänzt</li>
</ul>
<b>Version 1.19</b>:<br>
<ul>
    <li>[BUGFIX] Bilder/Video-Links ab Tiefe 3 korrigiert</li>
</ul>
<b>Version 1.18</b>:<br>
<ul>
    <li>[BUGFIX] Next-Link bei Episode 1 jeder Staffel gefixt</li>
</ul>
<b>Version 1.17</b>:<br>
<ul>
    <li>[BUG] Bei Episode 1 jeder Staffel ist der Button für die nächste Folge falsch verlinkt. Episode 2 muss von Hand aus dem Menü ausgewählt werden</li>
    <li>[INTERFACE] Hilfe-Button hinzugefügt</li>
</ul>
<b>Version 1.16</b>:<br>
<ul>
    <li>[INTERFACE] Abstand zu Mediennavigation verringert</li>
    <li>[FEATURE] Zurück- und Vorwärts-Knopf können nun auch zwischen Unterordner/Staffeln wechseln</li>
</ul>
<b>Version 1.15</b>:<br>
<ul>
    <li>[INTERFACE] Vor- und Zurückbutton angepasst, dass der Titel des nächsten Parts angezeigt wird</li>
    <li>[INTERFACE] Anzeige Anzahl Suchresultate</li>